Upgraded Spring and Hibernate to latest non-breaking versions.